# pengurai-regulasi

./: LICENSE  README.md  requirements.txt
api/: .gitignore  package-lock.json  package.json  pyproject.toml  wrangler.jsonc
api/src/: entry.py  pdf_to_json.py  pdf_to_spreadsheet.py
api/src/utils/: extract_text.py  parse_articles.py  patterns.py
scripts/: convert_json_to_spreadsheet.py  extract_articles_to_json.py  extract_articles_to_spreadsheet.py
utils/: normalize_text.py  parse_articles.py
web/: index.html  main.js
